# nvim_diary_template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  Pipfile  README.md  ci_requirements.txt  mypy.ini  pyproject.toml  requirements.txt
ci/: ci_requirements.txt  ci_test.sh
gcal_example/: basic_example.py  make_schedule.py
plugin/: diary_folds.vim  nvim_diary_template.vim  nvim_notes.vim  vim_wrapper.vim
pythonx/: diary_template_wrapper.py
rplugin/python3/deoplete/source/: github_labels.py  github_user_repos.py  google_calendars.py  vimwiki_tags.py
rplugin/python3/nvim-notes/: make_markdown_file.py  neovim_integration.py
rplugin/python3/nvim_diary_template/: __init__.py  plugin.py
rplugin/python3/nvim_diary_template/classes/: calendar_event_class.py  data_class_json.py  github_issue_class.py  nvim_github_class.py  nvim_google_cal_class.py  plugin_options.py
rplugin/python3/nvim_diary_template/helpers/: event_helpers.py  file_helpers.py  (+5 more)
rplugin/python3/nvim_notes/: neovim_integration.py  plugin.py
rplugin/python3/oni-notes/: neovim_integration.py
tests/: test_calendar_event_class.py  test_data_class_json.py  test_event_helpers.py  test_file_helpers.py  test_github_issue_class.py  test_google_calendar_helpers.py  test_issue_helpers.py  test_make_issues.py  test_make_markdown_file.py  test_make_schedule.py  test_markdown_helpers.py  test_neovim_helpers.py  test_nvim_github_class.py  test_nvim_google_cal_class.py  test_parse_markdown.py  test_plugin.py  test_plugin_options.py
tools/: generate_google_credentials.py
(+53 files in other folders)
