[tool.poetry]
name = "nvim_diary_template"
version = "0.1.0"
description = "A diary template creator plugin for Neovim."
authors = ["CrossR <sc13rjc@leeds.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = { version = "^0.6.0", python = "~3.6"}
neovim = "^0.2.6"
google-api-python-client = "^1.7"
python-dateutil = "^2.7"
PyGithub = "^1.40"
oauth2client = "^4.1"
pyuv = "^1.4"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"
mypy = "^0.620.0"
pylint = "^2.1"
pytest = "^3.8"
pre-commit = "^1.11"

[tool.black]
line-length = 88
py36 = true
