[tool.poetry]
name = "nvim_diary_template"
version = "0.2.0"
description = "A diary template creator plugin for (Neo)Vim."
authors = ["CrossR <r.cross@lancaster.ac.uk>"]
readme = "README.md"
packages = [
    { include = "nvim_diary_template", from = "rplugin/python3/" },
]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = { version = "^0.7.0", python = "~3.6"}
google-api-python-client = "^1.7"
python-dateutil = "^2.8"
PyGithub = "^1.44"
oauth2client = "^4.1"
pynvim = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.740"
pylint = "^2.4"
pytest = "^5.2"
pre-commit = "^1.2"
coverage = "^4.5"
pytest-cov = "^2.8"

[tool.black]
line-length = 88
py36 = true
